Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase00_15.out
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Expr> ::= ID
<Expr> ::= Integer
<Expr> ::= <Expr> < <Expr>
Parse error on line 6:
...stem.out.println(fib(i));			i++;		}	
-----------------------^
Expecting ';', '+', '-', '*', '/', '<', '<=', '>=', '>', '==', '!=', '&&', '||', '.', ')', ','